@@ -40,6 +40,7 @@ Version SVN HEAD (?)
   * Script Editor: Fixed crash on Ctrl + A, followed by Del.
   * fixed crash when opening dimension manager dialolg multiple times
     (and i.e. adding or removing dimensions each time)
+  * Show sample group name and CRC-32 checksum on "Sample" tab.
 
 Version 1.0.0 (2015-07-17)
 
